--- a/range.html
+++ b/range.html
@@ -1,1 +1,66 @@
+<!--  Write a HTML page with JavaScript that takes a number from one text field in the range 0-999 and display it in other text field in words. If the number is out of range, it should show “out of range” and if it is not a number then it should show “not a number” message in the result box. -->
 
+<html>
+	<head>
+		<script type="text/javascript">
+		var th = ['','thousand','million', 'billion','trillion'];
+		var dg=['zero','one','two','three','four','five','six','seven','eight','nine'];
+		var tn=['ten','eleven','twelve','thirteen','fourteen','fifteen','sixteen','seventeen','eighteen','nineteen'];
+		var tw=['twenty','thirty','forty','fifty','sixty','seventy','eighty','ninety'];
+		function change()
+		{
+		var numString=document.getElementById('anumber').value;
+		var output=towords(numString);
+		document.getElementById('aresult').value=output;
+		}
+		function towords(s)
+		{
+		s = s.toString();
+		if (s != parseFloat(s)) return 'Not a number';
+		var x = s.indexOf('.');
+		if (x == -1) x = s.length;
+		if (x > 3) return 'Out of range';
+		var n = s.split('');
+		var str = '';
+		var sk = 0;
+		for (var i=0; i < x; i++)
+		{
+		if ((x-i)%3==2)
+		{
+		if (n[i] == '1')
+		{
+		str += tn[Number(n[i+1])] + ' ';
+		i++;
+		sk=1;
+		}
+		else if (n[i]!=0)
+		{
+		str += tw[n[i]-2] + ' ';
+		sk=1;
+		}
+		}
+		else if (n[i]!=0)
+		{
+		str += dg[n[i]] +' ';
+		if ((x-i)%3==0) str += 'hundred ';
+		sk=1;
+		}
+		if ((x-i)%3==1)
+		{
+		if (sk) str += th[(x-i-1)/3] + ' ';
+		sk=0;
+		}
+		}
+		return str;
+		}
+		</script>
+	</head>
+	<body>
+		<form>
+			<p style="text-align:center; color : black; font-family: calibri; font-size: 25px" >  Enter anything ranges between 0 to 999 :</p><hr>
+			Enter a number <input type="text" id="anumber">
+			<input type="button" value= 'Convert it into words' onClick="change()">
+			In words <input type="text" size="40" id="aresult">
+		</form>
+	</body>
+</html>
